--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -57,7 +57,7 @@ services:
     healthcheck:
       test: [
         "CMD-SHELL",
-        "wget --no-verbose --tries=1 --spider http://localhost/health || exit 1"
+        "wget --no-verbose --tries=1 --spider http://127.0.0.1/health || exit 1"
       ]
       interval: 30s
       timeout: 5s
