--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "vitest run",
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run tests/unit",
+    "test:integration": "vitest run tests/integration",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui"
+    "test:e2e:ui": "playwright test --ui",
+    "test:all": "pnpm test && pnpm test:integration && pnpm test:e2e",
+    "playwright:install": "playwright install --with-deps",
+    "playwright:test": "playwright test",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:push": "prisma db push"
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
@@ -31,6 +39,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.4",
+    "kysely": "^0.28.8",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
@@ -67,6 +77,7 @@
     "msw": "^2.12.10",
     "prisma": "^7.4.0",
     "tailwindcss": "^4",
+    "testcontainers": "^11.6.0",
     "tsx": "^4.21.0",
     "typescript": "^5",
     "vitest": "^4.0.18",
