--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
-    "test:e2e": "playwright test",
+    "test:e2e": "node scripts/run-e2e.mjs",
     "test:e2e:ui": "playwright test --ui",
     "test:all": "pnpm test && pnpm test:integration && pnpm test:e2e",
     "playwright:install": "playwright install --with-deps",
